Add prospects block

--- a/index.html
+++ b/index.html
@@ -93,5 +93,24 @@
             </div>
         </div>
     </div>
+    <div class="prospects">
+        <div class="prospects-title">Перспективы развития</div>
+        <div class="prospects-body">
+            <div class="prospects-item">
+                <img src="img/icon1.svg" alt="">
+                <div class="prospects-column">
+                    <div class="prospects-column-title">Строительство контейнерных терминалов площадью 11 гектар</div>
+                    <div class="prospects-text">Строительство контейнерных терминалов площадью 11 гектар с подъездными ж/д путями длиной 1309 метров, что позволит принимать контейнерные поезда, которые обеспечиваются собственным локомотивом.</div>
+                </div>
+            </div>
+            <div class="prospects-item" id="widespreading">
+                <img src="img/icon2.svg" alt="">
+                <div class="prospects-column">
+                    <div class="prospects-column-title">Расширение вагонного парка</div>
+                    <div class="prospects-text">Расширение вагонного парка посредством приобретения полувагонов, крытых вагонов и фитинговых платформ</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
