Add application section and footer

--- a/index.html
+++ b/index.html
@@ -93,5 +93,42 @@
             </div>
         </div>
     </div>
+    <img src="img/train.jpg" alt="">
+    <div class="application">
+        <div class="application-content">
+            <div class="application-title">Оставьте вашу <span>заявку</span> </div>
+            <div class="application-subtitle">Заполните форму и мы перезвоним вам для консультации</div>
+            <form action="#" method="post" enctype="multipart/form-data">
+                <p><input tabindex="1" placeholder="Ваше имя" type="text" name="username" value=""></p>
+                <p><input tabindex="2" placeholder="Ваш номер телефона" type="tel" name="usernumber" value=""></p>
+                <p>
+                    <input id="goods" tabindex="3" placeholder="Груз" type="text" name="goods" value="">
+                    <input id="weight" tabindex="4" placeholder="Вес" type="text" name="weight" value="">
+                </p>
+                <p><input tabindex="5" placeholder="Маршрут груза" type="text" name="route" value=""></p>
+                <p><input tabindex="6" placeholder="Дополнительный комментарий" type="text" name="comment" value=""></p>
+                <p><button tabindex="7" type="submit">Отправить</button></p>
+            </form>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="footer-title">
+            <img src="img/footer-img.svg" alt="">
+            Aravt Group
+        </div>
+        <div class="footer-nav">
+            <div class="footer-item">О нас</div>
+            <div class="footer-item">Маршруты</div>
+            <div class="footer-item">Отзывы</div>
+        </div>
+        <div class="footer-contacts">
+            <div class="contacts-title">Контакты</div>
+            <div class="contacts-item">+7 (771) 757-64-94</div>
+            <div class="contacts-item">+7 (727) 54-64-94</div>
+            <div class="contacts-item">info@aravtgroup.kz</div>
+            <div class="contacts-item">a.is@aravtgroup.kz</div>
+        </div>
+        <div class="footer-address">Адрес<br><br>улица Ауэзова 60, офис 1Б.</div>
+    </footer>
 </body>
 </html>
