--- a/index.html
+++ b/index.html
@@ -3,44 +3,44 @@
 <head>
     <title>Aravt Group</title>
     <meta charset="UTF-8">
-   
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="content">
+    <nav class="nav">
         <div class="brand-name">
             <img src="img/brandIcon.svg" alt="">
             <div class="brand-text">Aravt Group</div>
         </div>
-        <div class="header-item"><a href="#">О нас</a></div>
-        <div class="header-item"><a href="#">Маршруты</a></div>
-        <div class="header-item"><a href="#">Перспективы</a></div>
-        <div class="header-item" id="last-item"><a href="#">Оставить заявку</a></div>
+        <div><a href="#">О нас</a></div>
+        <div><a href="#">Маршруты</a></div>
+        <div><a href="#">Перспективы</a></div>
+        <div id="last-item"><a href="#">Оставить заявку</a></div>
+    </nav>
+    <header class="header">
+        <div class="header-title">Доставляем ваш успех!</div>
+        <div class="header-subtitle">Логистические решения для вашего бизнеса</div>
+        <button class="request-button">Запрос на расчет</button>
     </header>
-    <div class="secondHeader">
-        <div class="second-title">Доставляем ваш успех!</div>
-        <div class="subtitle">Логистические решения для вашего бизнеса</div>
-        <button class="requestButton">Запрос на расчет</button>
-    </div>
-    <div class="about">
+    <section class="about">
         <div class="about-body">
-            <div class="about-title title">О нас</div>
+            <div class="title">О нас</div>
             <div class="about-text"><p>Aravt Group – современная транспортно-логистическая компания, миссия которой является создавать лучшие логистические решения для всех клиентов, обеспечивающая качественный и удобный сервис в сфере железнодорожных, мультимодальных и контейнерных перевозок, осуществляющая экспортные, импортные и транзитные направления.</p><br>  
             <p>Ежемесячно повышающееся число постоянных клиентов дает нам уверенность в своем деле. Надежность и качество - наши приоритетные задачи в осуществлении перевозок. С нами вы можете быть спокойны!</p></div>
         </div>
-        <div class="about-image">
+        <div>
             <img src="img/about.png" alt="">
         </div>
-    </div>
-    <div class="services">
+    </section>
+    <section class="services">
         <div class="services-title title">Наши услуги</div>
         <div class="services-body">
             <div class="services-item"><img src="img/boxtick.svg" alt="">Экспедирование </div>
             <div class="services-item"><img src="img/briefcase.svg" alt=""> Трейдинг</div>
-            <div class="services-item" id="vector"><img src="img/Vector.svg" alt=""><div> Контейнерный бизнес - <br>постройка терминала </div></div>
+            <div class="services-item"><img src="img/Vector.svg" alt=""><div> Контейнерный бизнес - <br>постройка терминала </div></div>
         </div>
-    </div>
-    <div class="routes">
+    </section>
+    <section class="routes">
         <div class="routes-content">
             <div>
                 <div class="routes-title">Маршруты, которые мы обслуживаем</div>
@@ -67,8 +67,8 @@
                 <div class="routes-year">*данные за 2022 год</div> 
             </div>
         </div>  
-    </div>
-    <div class="goods">
+    </section>
+    <section class="goods">
         <div class="goods-title">Основные виды груза</div>
         <div class="goods-items">
             <div class="goods-item">
@@ -92,28 +92,28 @@
                 <div class="goods-name">Зерновые культуры</div>
             </div>
         </div>
-    </div>
-    <div class="prospects">
+    </section>
+    <section class="prospects">
         <div class="prospects-title">Перспективы развития</div>
         <div class="prospects-body">
             <div class="prospects-item">
                 <img src="img/icon1.svg" alt="">
                 <div class="prospects-column">
                     <div class="prospects-column-title">Строительство контейнерных терминалов площадью 11 гектар</div>
-                    <div class="prospects-text">Строительство контейнерных терминалов площадью 11 гектар с подъездными ж/д путями длиной 1309 метров, что позволит принимать контейнерные поезда, которые обеспечиваются собственным локомотивом.</div>
+                    <div>Строительство контейнерных терминалов площадью 11 гектар с подъездными ж/д путями длиной 1309 метров, что позволит принимать контейнерные поезда, которые обеспечиваются собственным локомотивом.</div>
                 </div>
             </div>
             <div class="prospects-item" id="widespreading">
                 <img src="img/icon2.svg" alt="">
                 <div class="prospects-column">
                     <div class="prospects-column-title">Расширение вагонного парка</div>
-                    <div class="prospects-text">Расширение вагонного парка посредством приобретения полувагонов, крытых вагонов и фитинговых платформ</div>
+                    <div>Расширение вагонного парка посредством приобретения полувагонов, крытых вагонов и фитинговых платформ</div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <img src="img/train.jpg" alt="">
-    <div class="application">
+    <section class="application">
         <div class="application-content">
             <div class="application-title">Оставьте вашу <span>заявку</span> </div>
             <div class="application-subtitle">Заполните форму и мы перезвоним вам для консультации</div>
@@ -129,25 +129,25 @@
                 <p><button tabindex="7" type="submit">Отправить</button></p>
             </form>
         </div>
-    </div>
+    </section>
     <footer class="footer">
         <div class="footer-title">
             <img src="img/footer-img.svg" alt="">
             Aravt Group
         </div>
         <div class="footer-nav">
-            <div class="footer-item">О нас</div>
-            <div class="footer-item">Маршруты</div>
-            <div class="footer-item">Отзывы</div>
+            <div>О нас</div>
+            <div>Маршруты</div>
+            <div>Отзывы</div>
         </div>
         <div class="footer-contacts">
             <div class="contacts-title">Контакты</div>
-            <div class="contacts-item">+7 (771) 757-64-94</div>
-            <div class="contacts-item">+7 (727) 54-64-94</div>
-            <div class="contacts-item">info@aravtgroup.kz</div>
-            <div class="contacts-item">a.is@aravtgroup.kz</div>
+            <div>+7 (771) 757-64-94</div>
+            <div>+7 (727) 54-64-94</div>
+            <div>info@aravtgroup.kz</div>
+            <div>a.is@aravtgroup.kz</div>
         </div>
-        <div class="footer-address">Адрес<br><br>улица Ауэзова 60, офис 1Б.</div>
+        <div>Адрес<br><br>улица Ауэзова 60, офис 1Б.</div>
     </footer> 
 </body>
 </html>
