--- a/index.html
+++ b/index.html
@@ -7,147 +7,174 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="nav">
-        <div class="brand-name">
-            <img src="img/brandIcon.svg" alt="">
-            <div class="brand-text">Aravt Group</div>
-        </div>
-        <div><a href="#">О нас</a></div>
-        <div><a href="#">Маршруты</a></div>
-        <div><a href="#">Перспективы</a></div>
-        <div id="last-item"><a href="#">Оставить заявку</a></div>
-    </nav>
-    <header class="header">
-        <div class="header-title">Доставляем ваш успех!</div>
-        <div class="header-subtitle">Логистические решения для вашего бизнеса</div>
-        <button class="request-button">Запрос на расчет</button>
-    </header>
-    <section class="about">
-        <div class="about-body">
-            <div class="title">О нас</div>
-            <div class="about-text"><p>Aravt Group – современная транспортно-логистическая компания, миссия которой является создавать лучшие логистические решения для всех клиентов, обеспечивающая качественный и удобный сервис в сфере железнодорожных, мультимодальных и контейнерных перевозок, осуществляющая экспортные, импортные и транзитные направления.</p><br>  
-            <p>Ежемесячно повышающееся число постоянных клиентов дает нам уверенность в своем деле. Надежность и качество - наши приоритетные задачи в осуществлении перевозок. С нами вы можете быть спокойны!</p></div>
-        </div>
-        <div>
-            <img src="img/about.png" alt="">
-        </div>
-    </section>
-    <section class="services">
-        <div class="services-title title">Наши услуги</div>
-        <div class="services-body">
-            <div class="services-item"><img src="img/boxtick.svg" alt="">Экспедирование </div>
-            <div class="services-item"><img src="img/briefcase.svg" alt=""> Трейдинг</div>
-            <div class="services-item"><img src="img/Vector.svg" alt=""><div> Контейнерный бизнес - <br>постройка терминала </div></div>
-        </div>
-    </section>
-    <section class="routes">
-        <div class="routes-content">
-            <div>
-                <div class="routes-title">Маршруты, которые мы обслуживаем</div>
-                <div class="routes-text">Китай и страны СНГ</div>
-            </div>
-            <div>
-                <div class="routes-countries">
-                    <div class="routes-country">
-                        <div class="routes-name">Казахстан</div>
-                        <img src="img/Rectangle 14.svg" alt="">
-                        <div class="routes-percent">48%</div>
-                    </div>
-                    <div class="routes-country">
-                        <div class="routes-name">Китай</div>
-                        <img src="img/Rectangle 15.svg" alt="">
-                        <div class="routes-percent">44%</div>
-                    </div>
-                    <div class="routes-country">
-                        <div class="routes-name">Европа</div>
-                        <img src="img/Rectangle 16.svg" alt="">
-                        <div class="routes-percent">8%</div>
-                    </div>
+    <div class="main">
+        <nav class="nav">
+            <div class="container nav-content">
+                <div class="brand-name">
+                    <img src="img/brandIcon.svg" alt="">
+                    <div class="brand-text">Aravt Group</div>
                 </div>
-                <div class="routes-year">*данные за 2022 год</div> 
-            </div>
-        </div>  
-    </section>
-    <section class="goods">
-        <div class="goods-title">Основные виды груза</div>
-        <div class="goods-items">
-            <div class="goods-item">
-                <img src="img/coal" alt="">
-                <div class="goods-name">Уголь</div>
-            </div>
-            <div class="goods-item">
-                <img src="img/coke.png" alt="">
-                <div class="goods-name">Кокс</div>
-            </div>
-            <div class="goods-item">
-                <img src="img/rubble.png" alt="">
-                <div class="goods-name">Щебень</div>
-            </div>
-            <div class="goods-item">
-                <img src="img/ore.png" alt="">
-                <div class="goods-name">Руда</div>
-            </div>
-            <div class="goods-item">
-                <img src="img/cereals.png" alt="">
-                <div class="goods-name">Зерновые культуры</div>
-            </div>
-        </div>
-    </section>
-    <section class="prospects">
-        <div class="prospects-title">Перспективы развития</div>
-        <div class="prospects-body">
-            <div class="prospects-item">
-                <img src="img/icon1.svg" alt="">
-                <div class="prospects-column">
-                    <div class="prospects-column-title">Строительство контейнерных терминалов площадью 11 гектар</div>
-                    <div>Строительство контейнерных терминалов площадью 11 гектар с подъездными ж/д путями длиной 1309 метров, что позволит принимать контейнерные поезда, которые обеспечиваются собственным локомотивом.</div>
+                <div class="nav-list base-transition">
+                    <div><a href="#about">О нас</a></div>
+                    <div><a href="#routes">Маршруты</a></div>
+                    <div><a href="#prospects">Перспективы</a></div>
+                    <div class="nav-list-button"></div>
+                </div>
+                <div id="last-item"><a href="#application">Оставить заявку</a></div>
+                <div class="nav-burger">
+                    <span></span>
                 </div>
             </div>
-            <div class="prospects-item" id="widespreading">
-                <img src="img/icon2.svg" alt="">
-                <div class="prospects-column">
-                    <div class="prospects-column-title">Расширение вагонного парка</div>
-                    <div>Расширение вагонного парка посредством приобретения полувагонов, крытых вагонов и фитинговых платформ</div>
+        </nav>
+        <div class="wrapper">
+            <header class="header">
+                <div class="header-content container">
+                    <div class="header-title">Доставляем ваш успех!</div>
+                    <div class="header-subtitle">Логистические решения для вашего бизнеса</div>
+                    <button class="request-button"><a href="#application">Запрос на расчет</a></button>
+                </div> 
+            </header>
+            <section class="about" id="about">
+                <div class="about-content container">
+                    <div class="about-body">
+                        <div class="blue-title title">О нас</div>
+                        <div class="about-text"><p>Aravt Group – современная транспортно-логистическая компания, миссия которой является создавать лучшие логистические решения для всех клиентов, обеспечивающая качественный и удобный сервис в сфере железнодорожных, мультимодальных и контейнерных перевозок, осуществляющая экспортные, импортные и транзитные направления.</p><br>  
+                        <p>Ежемесячно повышающееся число постоянных клиентов дает нам уверенность в своем деле. Надежность и качество - наши приоритетные задачи в осуществлении перевозок. С нами вы можете быть спокойны!</p></div>
+                    </div>
+                    <div class="about-image">
+                        <img src="img/about.png" alt="">
+                    </div>
                 </div>
-            </div>
+            </section>
+            <section class="services">
+                <div class="title blue-title container">Наши услуги</div>
+                <div class="services-body">
+                    <div class="container">
+                        <div class="services-item"><img src="img/boxtick.svg" alt="">Экспедирование </div>
+                        <div class="services-item"><img src="img/briefcase.svg" alt=""> Трейдинг</div>
+                        <div class="services-item"><img src="img/Vector.svg" alt=""><div> Контейнерный бизнес - <br>постройка терминала </div></div>
+                    </div>
+                </div>
+            </section>
+            <section class="routes" id="routes">
+                <div class="routes-content container">
+                    <div>
+                        <div class="routes-title">Маршруты, которые мы обслуживаем</div>
+                        <div class="routes-text">Китай и страны СНГ</div>
+                    </div>
+                    <div class="routes-countries-wrapp">
+                        <div class="routes-countries">
+                            <div class="routes-country">
+                                <div class="routes-name">Казахстан</div>
+                                <img src="img/Rectangle 14.svg" alt="">
+                                <div class="routes-percent">48%</div>
+                            </div>
+                            <div class="routes-country">
+                                <div class="routes-name">Китай</div>
+                                <img src="img/Rectangle 15.svg" alt="">
+                                <div class="routes-percent">44%</div>
+                            </div>
+                            <div class="routes-country">
+                                <div class="routes-name">Европа</div>
+                                <img src="img/Rectangle 16.svg" alt="">
+                                <div class="routes-percent">8%</div>
+                            </div>
+                        </div>
+                        <div class="routes-year">*данные за 2022 год</div> 
+                    </div>
+                </div>  
+            </section>
+            <section class="goods container">
+                <div class="title">Основные виды груза</div>
+                <div class="goods-items">
+                    <div class="goods-item">
+                        <img src="img/coal" alt="">
+                        <div class="goods-name">Уголь</div>
+                    </div>
+                    <div class="goods-item">
+                        <img src="img/coke.png" alt="">
+                        <div class="goods-name">Кокс</div>
+                    </div>
+                    <div class="goods-item">
+                        <img src="img/rubble.png" alt="">
+                        <div class="goods-name">Щебень</div>
+                    </div>
+                    <div class="goods-item">
+                        <img src="img/ore.png" alt="">
+                        <div class="goods-name">Руда</div>
+                    </div>
+                    <div class="goods-item">
+                        <img src="img/cereals.png" alt="">
+                        <div class="goods-name">Зерновые культуры</div>
+                    </div>
+                </div>
+            </section>
+            <section class="prospects container" id="prospects">
+                <div class="title">Перспективы развития</div>
+                <div class="prospects-body">
+                    <div class="prospects-item">
+                        <img src="img/icon1.svg" alt="">
+                        <div class="prospects-column">
+                            <div class="prospects-column-title">Строительство контейнерных терминалов площадью 11 гектар</div>
+                            <div>Строительство контейнерных терминалов площадью 11 гектар с подъездными ж/д путями длиной 1309 метров, что позволит принимать контейнерные поезда, которые обеспечиваются собственным локомотивом.</div>
+                        </div>
+                    </div>
+                    <div class="prospects-item" id="widespreading">
+                        <img src="img/icon2.svg" alt="">
+                        <div class="prospects-column">
+                            <div class="prospects-column-title">Расширение вагонного парка</div>
+                            <div>Расширение вагонного парка посредством приобретения полувагонов, крытых вагонов и фитинговых платформ</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="train"></div>
+            <section class="application" id="application">
+                <div class="container">
+                    <div class="application-content">
+                        <div class="application-title">Оставьте вашу <span>заявку</span> </div>
+                        <div class="application-subtitle">Заполните форму и мы перезвоним вам для консультации</div>
+                        <form action="#" method="post" enctype="multipart/form-data">
+                            <p><input tabindex="1" placeholder="Ваше имя" type="text" name="username" value=""></p>
+                            <p><input tabindex="2" placeholder="Ваш номер телефона" type="tel" name="usernumber" value=""></p>
+                            <p>
+                                <input id="goods" tabindex="3" placeholder="Груз" type="text" name="goods" value="">
+                                <input id="weight" tabindex="4" placeholder="Вес" type="text" name="weight" value="">
+                            </p>
+                            <p><input tabindex="5" placeholder="Маршрут груза" type="text" name="route" value=""></p>
+                            <p><textarea tabindex="6" placeholder="Дополнительный комментарий" type="text" name="comment" value=""></textarea></p>
+                            <p><button  tabindex="7" type="submit">Отправить</button></p>
+                        </form>
+                    </div>
+                </div>
+            </section>
+            <footer class="footer">
+                <div class="footer-content container">
+                    <div class="footer-title">
+                        <img src="img/footer-img.svg" alt="">
+                        Aravt Group
+                    </div>
+                    <div class="footer-nav">
+                        <div><a href="#about">О нас</a></div>
+                        <div><a href="#routes">Маршруты</a></div>
+                        <div><a href="">Отзывы</a></div>
+                    </div>
+                    <div class="footer-contacts">
+                        <div class="contacts-title">Контакты</div>
+                        <div><a href="tel:+7 (771) 757-64-94">+7 (771) 757-64-94</a></div>
+                        <div><a href="tel:+7 (727) 54-64-94">+7 (727) 54-64-94</a></div>
+                        <div><a href="mailto:info@aravtgroup.kz">info@aravtgroup.kz</a></div>
+                        <div><a href="mailto:a.is@aravtgroup.kz">a.is@aravtgroup.kz</a></div>
+                    </div>
+                    <div>Адрес<br><br>улица Ауэзова 60, офис 1Б.</div>
+                </div>
+            </footer>
         </div>
-    </section>
-    <img src="img/train.jpg" alt="">
-    <section class="application">
-        <div class="application-content">
-            <div class="application-title">Оставьте вашу <span>заявку</span> </div>
-            <div class="application-subtitle">Заполните форму и мы перезвоним вам для консультации</div>
-            <form action="#" method="post" enctype="multipart/form-data">
-                <p><input tabindex="1" placeholder="Ваше имя" type="text" name="username" value=""></p>
-                <p><input tabindex="2" placeholder="Ваш номер телефона" type="tel" name="usernumber" value=""></p>
-                <p>
-                    <input id="goods" tabindex="3" placeholder="Груз" type="text" name="goods" value="">
-                    <input id="weight" tabindex="4" placeholder="Вес" type="text" name="weight" value="">
-                </p>
-                <p><input tabindex="5" placeholder="Маршрут груза" type="text" name="route" value=""></p>
-                <p><input tabindex="6" placeholder="Дополнительный комментарий" type="text" name="comment" value=""></p>
-                <p><button tabindex="7" type="submit">Отправить</button></p>
-            </form>
-        </div>
-    </section>
-    <footer class="footer">
-        <div class="footer-title">
-            <img src="img/footer-img.svg" alt="">
-            Aravt Group
-        </div>
-        <div class="footer-nav">
-            <div>О нас</div>
-            <div>Маршруты</div>
-            <div>Отзывы</div>
-        </div>
-        <div class="footer-contacts">
-            <div class="contacts-title">Контакты</div>
-            <div>+7 (771) 757-64-94</div>
-            <div>+7 (727) 54-64-94</div>
-            <div>info@aravtgroup.kz</div>
-            <div>a.is@aravtgroup.kz</div>
-        </div>
-        <div>Адрес<br><br>улица Ауэзова 60, офис 1Б.</div>
-    </footer> 
+    </div>
+
+    <div class="overlay base-transition"></div>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
