--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
                         <div class="application-title">Оставьте вашу <span>заявку</span> </div>
                         <div class="application-subtitle">Заполните форму и мы перезвоним вам для консультации</div>
                         <form action="#" method="post" enctype="multipart/form-data">
-                            <p><input tabindex="1" placeholder="Ваше имя" type="text" name="username" value=""></p>
-                            <p><input tabindex="2" placeholder="Ваш номер телефона" type="tel" name="usernumber" value=""></p>
-                            <p>
-                                <input id="goods" tabindex="3" placeholder="Груз" type="text" name="goods" value="">
-                                <input id="weight" tabindex="4" placeholder="Вес" type="text" name="weight" value="">
-                            </p>
-                            <p><input tabindex="5" placeholder="Маршрут груза" type="text" name="route" value=""></p>
+                            <p><input class="input" tabindex="1" placeholder="Ваше имя" type="text" name="username" value=""></p>
+                            <p><input class="input" tabindex="2" placeholder="Ваш номер телефона" type="number" name="usernumber" value=""></p>
+                            <div>
+                                <p id="goods"><input class="input" tabindex="3" placeholder="Груз" type="text" name="goods" value=""></p>
+                                <p id="weight"><input class="input" tabindex="4" placeholder="Вес" type="text" name="weight" value=""></p>
+                            </div>
+                            <p><input class="input" tabindex="5" placeholder="Маршрут груза" type="text" name="route" value=""></p>
                             <p><textarea tabindex="6" placeholder="Дополнительный комментарий" type="text" name="comment" value=""></textarea></p>
-                            <p><button  tabindex="7" type="submit">Отправить</button></p>
+                            <p><button  tabindex="7" type="button">Отправить</button></p>
                         </form>
                     </div>
                 </div>
@@ -173,6 +173,13 @@
     </div>
 
     <div class="overlay base-transition"></div>
+
+    <div class="accept">
+        <p>
+            <p>Ваша заявка успешно оформлена!</p>
+            <button class="accept-button">OK</button>
+        </p>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="script.js"></script>
