Запущена работа кнопки, закрывающей боковое меню

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="nav-list-item"><a href="#about">О нас</a></div>
                     <div class="nav-list-item"><a href="#routes">Маршруты</a></div>
                     <div class="nav-list-item"><a href="#prospects">Перспективы</a></div>
-                    <div class="nav-list-button"></div>
+                    <div class="nav-list-button nav-list-item"></div>
                 </div>
                 <div id="last-item"><a href="#order">Оставить заявку</a></div>
                 <div class="nav-burger">
