--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             </div>
                             <p class="field-wrapper"><input required class="field" tabindex="5" placeholder="Маршрут груза" type="text" name="route" value=""></p>
                             <p class="field-wrapper"><textarea class="field" tabindex="6" placeholder="Дополнительный комментарий" type="text" name="comment" value=""></textarea></p>
-                            <p><button  tabindex="7" type="button">Отправить</button></p>
+                            <p><button  tabindex="7" type="submit">Отправить</button></p>
                         </form>
                     </div>
                 </div>
